--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,45 @@
-python-dotenv
-langchain
-langchain-community
-langchain-openai
-langchain-pinecone
-pinecone-client
-openai
+python-dotenv==1.1.1
+langchain==0.0.1
+langchain-community==0.0.1
+langchain-openai==0.0.1
+langchain-pinecone==0.0.1
+pinecone-client==0.0.1
+openai==0.0.1
+distlib==0.4.0
+filelock==3.18.0
+fonttools==4.59.0
+fsspec==2025.7.0
+idna==3.10
+Jinja2==3.1.6
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.5
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.6
+opencv-python==4.12.0.88
+packaging==25.0
+pandas==2.3.1
+pillow==11.3.0
+pipenv==2025.0.4
+platformdirs==4.3.8
+psutil==7.0.0
+py-cpuinfo==9.0.0
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.4
+scipy==1.15.3
+six==1.17.0
+sympy==1.14.0
+torch==2.8.0
+torchvision==0.23.0
+tqdm==4.67.1
+typing_extensions==4.14.1
+tzdata==2025.2
+ultralytics==8.3.176
+ultralytics-thop==2.0.15
+urllib3==2.5.0
+virtualenv==20.33.1
